CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(LEETCODE-SOLUTIONS)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(src)

FILE(GLOB SOURCES src/*.cpp)

FOREACH(SOURCE ${SOURCES})
    GET_FILENAME_COMPONENT(SOURCE_NAME ${SOURCE} NAME_WE)
    ADD_EXECUTABLE(${SOURCE_NAME} ${SOURCE})
ENDFOREACH(SOURCE ${SOURCES})


