CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(LEETCODE-SOLUTIONS)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_BUILD_TYPE Debug)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

FILE(GLOB PROBLEM_DIRECTORIES RELATIVE ${CMAKE_SOURCE_DIR} "[0-9][0-9][0-9]_*")

FOREACH(PROBLEM_DIRECTORY ${PROBLEM_DIRECTORIES})
    ADD_SUBDIRECTORY(${PROBLEM_DIRECTORY})
ENDFOREACH(PROBLEM_DIRECTORY ${PROBLEM_DIRECTORIES})
