CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(LEETCODE-SOLUTIONS)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -ggdb")

set(CMAKE_BUILD_TYPE Debug)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(.)

FILE(GLOB PROBLEM_DIRECTORIES RELATIVE ${CMAKE_SOURCE_DIR} "[0-9][0-9][0-9]_*")

FOREACH(PROBLEM_DIRECTORY ${PROBLEM_DIRECTORIES})
    GET_FILENAME_COMPONENT(DIRECTORY_NAME ${PROBLEM_DIRECTORY} NAME)
    STRING(REGEX REPLACE "[0-9][0-9][0-9]_" "" PROBLEM_NAME ${DIRECTORY_NAME})
    AUX_SOURCE_DIRECTORY(${PROBLEM_DIRECTORY} ${PROBLEM_NAME}_SOURCES)
    ADD_EXECUTABLE( ${PROBLEM_NAME} ${${PROBLEM_NAME}_SOURCES})
ENDFOREACH(PROBLEM_DIRECTORY ${PROBLEM_DIRECTORIES})
